--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.8",
+    "@heroicons/react": "^1.0.6",
     "@redux-devtools/extension": "^3.2.2",
     "axios": "^0.25.0",
     "graphql": "^16.3.0",
-    "next": "latest",
+    "next": "^12.0.9",
     "next-redux-wrapper": "^7.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -18,7 +19,8 @@
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "sharp": "^0.30.1"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
