--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@redux-devtools/extension": "^3.2.2",
     "axios": "^0.25.0",
     "graphql": "^16.3.0",
+    "mongoose": "^6.2.7",
     "next": "^12.0.9",
+    "next-connect": "^0.12.2",
     "next-redux-wrapper": "^7.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
