--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
   "dependencies": {
     "@apollo/client": "^3.5.8",
     "@heroicons/react": "^1.0.6",
+    "@next-auth/mongodb-adapter": "^1.0.3",
     "@redux-devtools/extension": "^3.2.2",
     "axios": "^0.25.0",
     "graphql": "^16.3.0",
+    "mongodb": "^4.4.1",
     "mongoose": "^6.2.7",
     "next": "^12.0.9",
+    "next-auth": "^4.3.1",
     "next-connect": "^0.12.2",
     "next-redux-wrapper": "^7.0.5",
+    "nodemailer": "^6.7.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.33.1",
