--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "sharp": "^0.30.1"
+    "sharp": "^0.30.1",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
@@ -35,7 +36,6 @@
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
-    "tailwindcss": "^3.0.7",
-    "typescript": "4.5.4"
+    "tailwindcss": "^3.0.7"
   }
 }
